# rogue

c/: CMakeLists.txt  makefile
c/include/: combat.h  door.h  game.h  item.h  level.h  mainMenu.h  monster.h  player.h  position.h  potion.h  rogue.h  room.h  utils.h  weapon.h
c/src/: combat.c  game.c  level.c  main.c  monster.c  player.c  room.c  screen.c
c/src/entities/: level.c  monster.c  player.c  room.c
c/src/entities/items/: itemFactory.c
c/src/utils/: pathFinding.c
c/src/windows/: mainMenu.c
